argo-rollouts/canary/overlays/localhost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: rollouts-demo-stable
spec:
  ingressClassName: nginx
  rules:
  - host: rollouts-canary.7f000001.nip.io
    http:
      paths:
      - backend:
          service:
            name: rollouts-demo-stable
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: rollouts-canary-preview.7f000001.nip.io
    http:
      paths:
      - backend:
          service:
            name: rollouts-demo-canary
            port:
              number: 80
        path: /
        pathType: Prefix
